--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build
+        run: npm run build VITE_API_KEY=wsUd6_u8bAtn2bR_3fg5gfQ2_EyuObcbT1_6f9cSJa8
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
