--- a/.github/workflows/deploys3.yml
+++ b/.github/workflows/deploys3.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build VITE_API_KEY
+        run: npm run build
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
